...
        summary = "Press ${data['KeyDown']}";
      } else if (data.containsKey('KeyUp')) {
        summary = "Release ${data['KeyUp']}";
      } else if (data.containsKey('KeyTap')) {
        summary = "Tap ${data['KeyTap']}";
      } else if (data['Block'] != null || data.containsKey('Block')) {
        summary = "Blocked";
      } else if (data['PassThrough'] != null ||
          data.containsKey('PassThrough')) {
        summary = "Pass Through";
      }
      // Legacy / Raw formats
      else if (data.containsKey('ScanCode')) {
...
